# ai-chat-application-main

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  env
ai-service/: README.md  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: chat.py
ai-service/app/core/: config.py  embeddings.py  llm.py  rag.py  tools.py
ai-service/app/db/: vector_store.py
ai-service/app/models/: schemas.py
backend/: README.md  pom.xml
backend/src/main/java/com/example/chat/config/: DataSeeder.java  JwtAuthenticationFilter.java  JwtConfig.java  SecurityConfig.java
backend/src/main/java/com/example/chat/controller/: AuthController.java  ConversationController.java  MessageController.java
backend/src/main/java/com/example/chat/entity/: Conversation.java  Message.java  User.java
backend/src/main/java/com/example/chat/repository/: ConversationRepository.java  MessageRepository.java  UserRepository.java
backend/src/main/java/com/example/chat/service/: AiClient.java  (+3 more)
backend/src/main/resources/: application.properties  application.yml
backend/src/test/java/com/example/chat/: ChatApplicationTests.java
backend/src/test/resources/: application.properties
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatWindow.tsx  InputBox.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
(+3 files in other folders)
