[tool]
name = "ai-chat-rag-starter"
version = "0.1.0"
description = "A full-stack AI chat application with context memory (RAG)"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
faiss-cpu = "^1.7.0"  # or "chromadb" if using ChromaDB
openai = "^0.27.0"  # or compatible LLM library

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"